# investment_portfolio_manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI_CHEATSHEET.md  CLI_MANUAL.md  CODEBASE_INVENTORY.md  DATAFLOW_GUIDE.txt  Functions.txt  INTERFACE_MAP.txt  Main.py  PORTFOLIO_SHEET_SCHEMA.md  README.md  REALIZED_GL_PARSER_SPEC.md  STATUS_AND_TODO.txt  Schwab API Integration.md  TASK_thesis_sync.md.md  ai_feature_instructions.md  ai_feature_prompts.md  app.py  audit.py  audit_config.py  audit_prompts.md  checkmodels.py  cli_migration_01_spine_scaffold.md  cli_migration_01b_bundle_patch.md  cli_migration_02_vault_bundle.md  cli_migration_03_rebuy_analyst.md  cli_migration_03c_framework_registry.md  cli_migration_04_schwab_bundle_source.md  cli_migration_phase02_plan.md  config.py  config_template.py  create_portfolio_sheet.py  create_sa_file.py  create_sa_file_2.py  debug_headers.py  diag_concentration.py  dimon_strategy.json  enrich_technicals_prompt.md  fix_json.py  (+36 more)
.claude/: launch.json  settings.local.json
Books/: 100_Baggers_-_Christopher_Meyers.txt  Option_Volatility_n_Pricing_-_Sheldon_Natenberg.txt  Technological_Revolutions_and_Financial_Capital_-_Carlota_Perez.txt  The_psychology_of_money_-_Morgan_housel.txt  Trade_Your_Way_to_Financial_Freedom_-_Van_K_Tharp.txt  joys_of_compounding.txt  ~$e_psychology_of_money_-_Morgan_housel.txt
agents/: 02_add_candidate_analyst_prompt.md  03_new_idea_screener_prompt.md  04_list_coherence_checker_prompt.md  100bangers.py  OptionsFramework.json  Options_agent.py  README.md  Thesis_Screener_Agent.py  VanTharp.json  analyze_all.py  (+15 more)
(+290 files in other folders)
